methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:98: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.FlowerCase'
override def run() {
             ^